# seq-smith

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  README.md  c_align.py  debug_align.py  pyproject.toml  verify_c_align.py
.github/workflows/: release.yaml
align/: align.h  alignment.c  global_align.c  helpers.h  local_align.c
docs/source/: conf.py  index.rst
seq-align/: Cargo.toml
seq-align/src/: lib.rs
seq_smith/: __init__.py  _seq_smith.pyi  python_utils.py
src/: lib.rs
tests/: Makefile  c_align.py  test_seq_align.py  test_seq_smith.py  verify_c_align.py
tests/align/: align.c  glocal_align.c
