[package]
name = "seq_smith"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16.1"
numpy = "0.27.0"
pyo3 = { version = "0.27.1", features = ["extension-module", "generate-import-lib"] }
pyo3-stub-gen = "0.17.1"

[build-dependencies]
pyo3-build-config = "0.27.1"

[lib]
name = "_seq_smith"
crate-type = ["cdylib", "rlib"]
